# loquat

./: .gitignore  Cargo.toml  Shuttle.toml  clean.sh  dev.sh  prod.sh
admin_web/: Cargo.toml  Trunk.toml  index.html
admin_web/src/: api.rs  features.rs  lib.rs  main.rs  route.rs  store.rs
admin_web/src/api/: a1_report.rs  fan_series.rs  fan_size.rs  store.rs
admin_web/src/common/: components.rs
admin_web/src/common/components/: determination_paste_text_area.rs  determination_table.rs  fan_series_and_size_picker.rs  select.rs
admin_web/src/features/: a1_2010_report.rs  fan_series.rs  fan_size.rs
admin_web/src/features/a1_2010_report/: components.rs  hooks.rs  pages.rs  store.rs
admin_web/src/features/a1_2010_report/components/: a1_determination_table.rs  a1_fan_plot.rs  a1_form.rs
admin_web/src/features/a1_2010_report/pages/: edit.rs  new.rs
admin_web/src/features/fan_series/: api.rs  components.rs  hooks.rs  pages.rs  store.rs
admin_web/src/features/fan_series/components/: fan_series_form.rs  fan_series_picker.rs
admin_web/src/features/fan_series/pages/: edit.rs  index.rs  new.rs  read.rs
admin_web/src/features/fan_size/: api.rs  components.rs  pages.rs  store.rs
admin_web/src/features/fan_size/components/: fan_size_picker.rs
admin_web/static/: login.html
common/: Cargo.toml
common/src/: a1_standard_2010.rs  api.rs  calculations.rs  lib.rs  main.rs  models.rs  util.rs
common/src/api/: a1_2010_report.rs  fan_series.rs  fan_size.rs
common/src/calculations/: a1_2010.rs  a1_operating_point.rs  a2_2010.rs  a2_operating_point.rs  core.rs  s1_2010.rs  standards.rs  test_units.rs  traits.rs  units.rs
common/src/calculations/core/: fan_curve.rs  operating_point.rs
common/src/calculations/standards/: a1_2010.rs  a2_2010.rs  s1_2010.rs
common/src/calculations/test_units/: brake_horsepower.rs  fan_curve.rs  fan_diameter.rs  fan_speed.rs  inlet_airflow.rs  operating_point.rs  outlet_airflow.rs  static_pressure.rs  unit_math.rs
common/src/calculations/traits/: error_comparable.rs  indexing.rs  interpolable.rs  lenable.rs  scaling.rs
common/src/calculations/units/: brake_horsepower.rs  fan_speed.rs  inlet_airflow.rs  outlet_airflow.rs  static_pressure.rs
common/src/models/: a1_2010_report.rs  a2_2010_report.rs  fan.rs  fan_series.rs  fan_size.rs  fan_type.rs  induced_fan_size.rs  induced_flow_fan_size.rs  mod.rs  nozzle.rs  test_events.rs
common/src/models/test_events/: a1_2010.rs  a2_2010.rs  s1_2010.rs  test_units.rs
migrations/: 20230516133517_create_fan_series.up.sql  20230516133556_create_fan_sizes.up.sql
server/: .env  Cargo.toml  schema.sql  sqlx-data.json
server/migrations/: 20230516133517_create_fan_serieses.down.sql  20230516133517_create_fan_serieses.up.sql  20230516133556_create_fan_sizes.down.sql  20230516133556_create_fan_sizes.up.sql  20230516134246_create_a1_2010_reports.down.sql  20230516134246_create_a1_2010_reports.up.sql
server/src/: controllers.rs  db.rs  lib.rs  main.rs
server/src/controllers/: a1_2010_report.rs  fan_series.rs  fan_size.rs  sessions.rs
server/src/models.rs/: fan.rs  mod.rs
server/src/queries/fan_series/: get_fan_series.sql
server/src/resources/: fan_series.rs  fan_size.rs
static/: index.html  loquat_admin_web-31809b20b0e75e67.js  loquat_admin_web-31809b20b0e75e67_bg.wasm  loquat_admin_web-7a91fba83c4cf53e.js  loquat_admin_web-7a91fba83c4cf53e_bg.wasm  loquat_admin_web-92ece8141778d623.js  loquat_admin_web-92ece8141778d623_bg.wasm  loquat_admin_web-a74d3bb6a006607f.js  loquat_admin_web-a74d3bb6a006607f_bg.wasm  loquat_admin_web-eabc87b3f3801181.js  loquat_admin_web-eabc87b3f3801181_bg.wasm
(+7 files in other folders)
