[package]
name = "loquat_admin_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loquat_common = { path = "../common" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.5"
gloo-console = "0.2.3"
log = "0.4.17"
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9"
