[package]
name = "loquat_admin_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loquat_common = { path = "../common" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.5"
gloo-console = "0.2.3"
gloo-events = "0.1"
log = "0.4.17"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = "0.3.63"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yewdux = "0.9"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
