[package]
name = "loquat_server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loquat_common = { path = "../common" }
shuttle-runtime = "0.15.0"
axum = "0.6.18"
shuttle-axum = "0.15.0"
itertools = "0.10.5"
tokio = "1.28.0"
shuttle-static-folder = "0.15.0"
shuttle-shared-db = { version = "0.15.0", features = ["postgres"] }
tower-http = { version = "0.3.0", features = ["fs"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "offline", "json"] }
