[package]
name = "loquat_server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loquat_common = { path = "../common" }
shuttle-runtime = "0.16.0"
axum = "0.6.18"
shuttle-axum = "0.16.0"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

tokio = "1.28.0"
shuttle-secrets = "0.16.0"
shuttle-static-folder = "0.16.0"
shuttle-aws-rds= { version = "0.16.0", features = ["postgres"] }
shuttle-shared-db = { version = "0.16.0", features = ["postgres"] }
tower-http = { version = "0.3.0", features = ["fs"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "offline", "json"] }
